<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JUMA BLE调试助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">Send</string>
    <string name="scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="key_1">F 1</string>
    <string name="key_2">F 2</string>
    <string name="key_3">F 3</string>
    <string name="key_4">F 4</string>
    <string name="key_5">F 5</string>
    <string name="key_6">F 6</string>
    <string name="key_7">F 7</string>
    <string name="key_8">F 8</string>
    <string name="key_9">F 9</string>
    <string name="name">NAME : </string>
	<string name="uuid">UUID : </string>
	<string name="start">Start</string>
	<string name="cancel">Cancel</string>
	<string name="select_device">Select device</string>
	<string name="scanning">Scanning</string>
	<string name="scan_hint">Please enter the device name</string>
	<string name="edit_hint">Please enter message</string>
	<string name="explain_edit">Button editor</string>
	<string name="ok">Ok</string>
</resources>