<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/select_device"
        android:textColor="#38b0de"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="-2dp"
        android:background="#38b0de" />

    <ListView
        android:id="@+id/lvDevice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#38b0de" />

    <EditText
        android:id="@+id/etInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/scan_hint"
        android:lines="1"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnStartScan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCancelScan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>